* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 0.3.0
- Add AlmaLinux 8 support

* Mon Jul 17 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
- Add RockyLinux 8 support

* Wed Aug 04 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
- Fixed the bootstrap template
  - Set the SUDOers OU properly
  - Removed the ignore_local_sudoers option from the sudo defaults for safety
  - Added the usual batch of sudoers defaults

* Mon May 17 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.0
- Initial release