@@ -1,6 +1,6 @@
 {
   "name": "simp-simp_ds389",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "simp",
   "summary": "Profile module for SIMP DS389 server",
   "license": "Apache-2.0",
@@ -18,15 +18,15 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 4.4.1 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "simp/simp_firewalld",
-      "version_requirement": ">= 0.1.3 < 2.0.0"
+      "version_requirement": ">= 0.1.3 < 1.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -64,7 +64,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
